libcwiid/cwiid.h

/* Maximum Data Read Length */
#define CWIID_MAX_READ_LEN	0xFFFF
/* Array Index Defs */
#define CWIID_X		0
#define CWIID_Y		1
#define CWIID_Z		2
/* Acc Defs */
#define CWIID_ACC_MAX	0xFF
/* IR Defs */
#define CWIID_IR_SRC_COUNT	4
#define CWIID_IR_X_MAX		1024
#define CWIID_IR_Y_MAX		768
/* Battery */
#define CWIID_BATTERY_MAX	0xD0
/* Classic Controller Maxes */
#define CWIID_CLASSIC_L_STICK_MAX	0x3F
#define CWIID_CLASSIC_R_STICK_MAX	0x1F
#define CWIID_CLASSIC_LR_MAX	0x1F
/* Callback Maximum Message Count */
#define CWIID_MAX_MESG_COUNT	5
/* Enumerations */
enum cwiid_command {
	CWIID_CMD_STATUS,
	CWIID_CMD_LED,
	CWIID_CMD_RUMBLE,
	CWIID_CMD_RPT_MODE
};
enum cwiid_mesg_type {
	CWIID_MESG_STATUS,
	CWIID_MESG_BTN,
	CWIID_MESG_ACC,
	CWIID_MESG_IR,
	CWIID_MESG_NUNCHUK,
	CWIID_MESG_CLASSIC,
	CWIID_MESG_ERROR,
	CWIID_MESG_UNKNOWN
};
enum cwiid_ext_type {
	CWIID_EXT_NONE,
	CWIID_EXT_NUNCHUK,
	CWIID_EXT_CLASSIC,
	CWIID_EXT_UNKNOWN
};
enum cwiid_error {
	CWIID_ERROR_NONE,
	CWIID_ERROR_DISCONNECT,
	CWIID_ERROR_COMM
};
struct acc_cal {
	uint8_t zero[3];
	uint8_t one[3];
};
/* Message Structs */
struct cwiid_status_mesg {
	enum cwiid_mesg_type type;
	uint8_t battery;
	enum cwiid_ext_type ext_type;
};
	

struct cwiid_btn_mesg {
	enum cwiid_mesg_type type;
	uint16_t buttons;
};
struct cwiid_acc_mesg {
	enum cwiid_mesg_type type;
	uint8_t acc[3];
};
struct cwiid_ir_src {
	char valid;
	uint16_t pos[2];
	int8_t size;
};
struct cwiid_ir_mesg {
	enum cwiid_mesg_type type;
	struct cwiid_ir_src src[CWIID_IR_SRC_COUNT];
};
struct cwiid_nunchuk_mesg {
	enum cwiid_mesg_type type;
	uint8_t stick[2];
	uint8_t acc[3];
	uint8_t buttons;
};
struct cwiid_classic_mesg {
	enum cwiid_mesg_type type;
	uint8_t l_stick[2];
	uint8_t r_stick[2];
	uint8_t l;
	uint8_t r;
	uint16_t buttons;
};
struct cwiid_error_mesg {
	enum cwiid_mesg_type type;
	enum cwiid_error error;
};
union cwiid_mesg {
	enum cwiid_mesg_type type;
	struct cwiid_status_mesg status_mesg;
	struct cwiid_btn_mesg btn_mesg;
	struct cwiid_acc_mesg acc_mesg;
	struct cwiid_ir_mesg ir_mesg;
	struct cwiid_nunchuk_mesg nunchuk_mesg;
	struct cwiid_classic_mesg classic_mesg;
	struct cwiid_error_mesg error_mesg;
};
/* State Structs */
struct nunchuk_state {
	uint8_t stick[2];
	uint8_t acc[3];
	uint8_t buttons;
};
struct classic_state {
	uint8_t l_stick[2];
	uint8_t r_stick[2];
	uint8_t l;
	uint8_t r;
	uint16_t buttons;
};
union ext_state {
	struct nunchuk_state nunchuk;
	struct classic_state classic;
};
struct cwiid_state {
	uint8_t rpt_mode;
	uint8_t led;
	uint8_t rumble;
	uint8_t battery;
	uint16_t buttons;
	uint8_t acc[3];
	struct cwiid_ir_src ir_src[CWIID_IR_SRC_COUNT];
	enum cwiid_ext_type ext_type;
	union ext_state ext;
	enum cwiid_error error;
};
/* Typedefs */
typedef struct wiimote cwiid_wiimote_t;
typedef void cwiid_err_t(cwiid_wiimote_t *, const char *, va_list ap);
/* get_bdinfo */
#define BT_NO_WIIMOTE_FILTER 0x01
#define BT_NAME_LEN 32
struct cwiid_bdinfo {
	bdaddr_t bdaddr;
	uint8_t btclass[3];
	char name[BT_NAME_LEN];
};
/* Error reporting (library wide) */
int cwiid_set_err(cwiid_err_t *err);
void cwiid_err_default(struct wiimote *wiimote, const char *str, va_list ap);
/* Connection */
#define cwiid_connect cwiid_open
int cwiid_enable(cwiid_wiimote_t *wiimote, int flags);
int cwiid_get_mesg(cwiid_wiimote_t *wiimote, int *mesg_count,
                   union cwiid_mesg *mesg[], struct timespec *timestamp);